# midi-agent

./: .env.example  LICENSE  Makefile  README.md  main.py  notebook.py  pyproject.toml
midiagent/: ai.py  constants.py  midi_playback.py  midi_widget.py  types.py
